<resources>
    <string name="app_name">WeRent Carsl</string>
    <string name="car_renter">
CAR RENTER
</string>
    <string name="hello_welcome">
Hello 👋 welcome to the app that allows you to rent a car of your style and rent out any of your car at your convenience
</string>
    <string name="need_to_rent">
Need to rent a car in style?
</string>
    <string name="todo">image</string>
    <string name="textview">Car Renter</string>
    <string name="click_">click ⬇️
</string>
    <string name="Here">Here</string>
    <string name="here">Here</string>
    <string name="Her">Here</string>
    <string name="check">TODO</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="insta">TODO</string>
    <string name="more">Want to rent out your car at your convenience?</string>
    <string name="tod">TODO</string>
    <string name="logo">imagelogo</string>
    <string name="mor">Need to rent a car in style?</string>
    <string name="home">Great to see you rider : )</string>
    <string name="textmore">Rent and Ride your dream car in style🚙</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="darkmode">Dark</string>
    <string name="loginBtn">Login</string>
    <string name="loginText">Welcome to Login</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">Enter Password</string>
    <string name="forgotPas">Forgot Password ?</string>
    <string name="alreadyHave">Don\'t an have an account?</string>
    <string name="regiterBtn">Register</string>
    <string name="registertext">Create An Account with Us</string>
    <string name="phone">Enter Phone Number</string>
    <string name="username">Enter Username</string>
    <string name="enterFullName">Enter FullName</string>
    <string name="haveAnaccount">Have account ?</string>
    <string name="registerBtn">Register</string>
    <string name="loginbtn">Login Here</string>
    <string name="enterusername">Enter Username</string>
    <string name="enternames">Enter Fullname</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log Out</string>
    <string name="name">name</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="loginp">Login</string>
    <string name="email">Email</string>
    <string name="loginl">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_passwordm">Forgot Password?</string>
    <string name="passwords">Password</string>
    <string name="model">Car Model?</string>
    <string name="noPlate">Number Plate?</string>
    <string name="price">Enter Rate to Hire in KSHS?</string>
    <string name="location">Enter Your Location?</string>
    <string name="carType">What type is your Car?</string>
    <string name="addcar">Add a Car</string>
    <string name="usernamec">Enter UserName</string>

</resources>