<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/dialogForgot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/white_box">

        <TextView
            android:id="@+id/forgotTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lavender_round"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="#263238"
            android:textSize="17sp"
            app:drawableLeftCompat="@drawable/ic_baseline_lock_reset_24"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_your_email_address"
            android:textColor="#5C6BC0"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/emailBox"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/emailBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/lavender"
            android:hint="@string/enterEmail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColor="@color/lavender"
            android:textColorHint="#5C6BC0"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            android:textColor="#795548"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailBox"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reset"
            android:textColor="#795548"
            android:textSize="14sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>